Added Dynamixel EEPROM instructions.